feat: add delete permissions api
