# internal/http/controller/admin/permission/permission_delete.go
@@ -1,0 +1,88 @@
+package permission
+
+import (
+	"net/http"
+
+	"github.com/ChanJuiHuang/go-backend-framework/internal/http/response"
+	"github.com/ChanJuiHuang/go-backend-framework/internal/pkg/database"
+	"github.com/ChanJuiHuang/go-backend-framework/internal/pkg/model"
+	"github.com/ChanJuiHuang/go-backend-framework/internal/pkg/permission"
+	"github.com/ChanJuiHuang/go-backend-framework/pkg/booter/service"
+	"github.com/casbin/casbin/v2"
+	"github.com/gin-gonic/gin"
+	"github.com/pkg/errors"
+	"github.com/samber/lo"
+	"go.uber.org/zap"
+	"gorm.io/gorm"
+)
+
+type PermissionDeleteRequest struct {
+	Ids []uint `json:"ids" binding:"required"`
+}
+
+// @tags admin-permission
+// @accept json
+// @produce json
+// @param X-XSRF-TOKEN header string true "csrf token"
+// @param Authorization header string true "bearer token"
+// @param id path string true "id"
+// @param request body permission.PermissionDeleteRequest true "delete permissions"
+// @success 204 "no content"
+// @failure 400 {object} response.ErrorResponse "code: 400-001(delete permissions failed), 400-002(request validation failed)"
+// @failure 401 {object} response.ErrorResponse "code: 401-001(access token is wrong)"
+// @failure 403 {object} response.ErrorResponse "code: 403-001(csrf token mismatch, casbin authorization failed)"
+// @failure 500 {object} response.ErrorResponse "code: 500-001"
+// @router /api/admin/permission [delete]
+func Delete(c *gin.Context) {
+	reqBody := new(PermissionDeleteRequest)
+	logger := service.Registry.Get("logger").(*zap.Logger)
+	if err := c.ShouldBindJSON(reqBody); err != nil {
+		errResp := response.NewErrorResponse(response.RequestValidationFailed, errors.WithStack(err), nil)
+		logger.Warn(errResp.Message, errResp.MakeLogFields(c.Request)...)
+		c.AbortWithStatusJSON(errResp.StatusCode(), errResp)
+		return
+	}
+
+	permissions, err := permission.GetMany(database.NewTx(), "id IN ?", reqBody.Ids)
+	if err != nil {
+		errResp := response.NewErrorResponse(response.BadRequest, errors.WithStack(err), nil)
+		logger.Warn(errResp.Message, errResp.MakeLogFields(c.Request)...)
+		c.AbortWithStatusJSON(errResp.StatusCode(), errResp)
+		return
+	}
+
+	err = database.NewTx().Transaction(func(tx *gorm.DB) error {
+		if err := permission.Delete(tx, "id IN ?", reqBody.Ids); err != nil {
+			return err
+		}
+
+		names := lo.Map(permissions, func(p model.Permission, _ int) string {
+			return p.Name
+		})
+		if err := permission.DeleteCasbinRule(tx, "ptype = ? AND v0 IN ?", "p", names); err != nil {
+			return err
+		}
+
+		if err := permission.DeleteCasbinRule(tx, "ptype = ? AND v1 IN ?", "g", names); err != nil {
+			return err
+		}
+
+		return nil
+	})
+	if err != nil {
+		errResp := response.NewErrorResponse(response.BadRequest, errors.WithStack(err), nil)
+		logger.Warn(errResp.Message, errResp.MakeLogFields(c.Request)...)
+		c.AbortWithStatusJSON(errResp.StatusCode(), errResp)
+		return
+	}
+
+	enforcer := service.Registry.Get("casbinEnforcer").(*casbin.SyncedCachedEnforcer)
+	if err := enforcer.LoadPolicy(); err != nil {
+		errResp := response.NewErrorResponse(response.BadRequest, errors.WithStack(err), nil)
+		logger.Warn(errResp.Message, errResp.MakeLogFields(c.Request)...)
+		c.AbortWithStatusJSON(errResp.StatusCode(), errResp)
+		return
+	}
+
+	c.Status(http.StatusNoContent)
+}
